tests/Rules/Structure/Fixtures/invalid/button_inside_anchor.html.twig
{# 1 errors #}
<a href="/home">
  <button>Go home</button>
</a>
